# VisuCheck

./: .gitignore  Comandos.txt  README.md  pyproject.toml
configs/: datasets.yaml  detector.yaml  ocr.yaml
configs/rules/: price.yaml  variant.yaml  weight.yaml
dashboard/: app.py
scripts/: analyze_prices.py  analyze_samples.py  analyze_shelf.py  clean_prices.py  dashboard_prices.py  export_results.py  import_to_sqlite.py  save_samples.py  version_test.py  visualize_results.py
src/app/: main.py  schemas.py
src/core/detectors/: yolo.py
src/core/ocr/: ocr.py  paddle_ocr.py  preprocess.py
src/core/rules/: parsers.py
src/core/utils/: config_loader.py
src/lang/prompts/: policy_router.md  reasoning_report.md
src/services/: annotate.py  ocr.py  pipeline.py
src/ui/: app.py
