[project]
name = "visucheck"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.9",
  "python-multipart>=0.0.9",
  "pillow>=10.4",
  "opencv-python>=4.10",
  "ultralytics>=8.3",        # YOLO
  "paddleocr>=2.9",          # OCR (si falla en tu entorno, pasamos a tesseract)
  "langchain>=0.3",
  "langgraph>=0.2",
  "pydantic-settings>=2.6",
  "jinja2>=3.1",             # para futuros PDFs
  "reportlab>=4.2",          # PDF simple
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "streamlit>=1.39"
]

[tool.uv.sources]
ultralytics = { git = "https://github.com/ultralytics/ultralytics.git" }
